--- a/gb/23/7/28/n14043872.md
+++ b/gb/23/7/28/n14043872.md
@@ -1,76 +1,67 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国红十字会被曝人均工资福利43万 文章被删</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14043883-GettyImages-51914911-600x400.jpg" />
 <h6>2005年1月5日，印度洋发生海啸之后，中共官方呼吁中国民众为相关国家捐款，中国红十字会北京办事处的员工正在清点收到的捐款。(PETER PARKS/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2023年07月29日讯】（大纪元记者李净报导）自<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%83%AD%E7%BE%8E%E7%BE%8E.md#1">郭美美</a>炫富等丑闻被曝光后，令中共官方慈善机构的公信力受到质疑，其接收社会捐款的数额剧减。近日，大陆媒体披露<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BA%A2%E5%8D%81%E5%AD%97%E4%BC%9A.md#1">中国红十字会</a>总会人均43万元的消息，引起舆论争议。</p>
-<p>7月26日，新浪、网易等大陆网站刊登一篇题为“人间有真情，中国红十字总会发布数据，人均<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84%E7%A6%8F%E5%88%A9.md#1">工资福利</a>收入仅43.5万”的文章，该文原本为<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BA%A2%E5%8D%81%E5%AD%97%E4%BC%9A.md#1">中国红十字会</a>总会救助灾民的“善举”点赞，反而透露了中国慈善机构不愿公开的“秘密”。</p>
-<p>文章展示了中国红十字会总会的支出数据，在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84%E7%A6%8F%E5%88%A9.md#1">工资福利</a>支出一栏，其中包括基本工资、津贴补贴、奖金、伙食补助等十项支出，合计支出为2,612万元。文章还特别提到，中国红十字会总会的公职人员为60人，人均为43.5万元。</p>
-<figure id="attachment_14043878" aria-describedby="caption-attachment-14043878" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14043878-1-e1690580906952.jpeg"><img class="size-full wp-image-14043878" src="https://i.epochtimes.com/assets/uploads/2023/07/id14043878-1-e1690580906952.jpeg" alt="" width="450" b="462" /></a><figcaption id="caption-attachment-14043878" class="wp-caption-text">（网页截图）</figcaption></figure>
-<figure id="attachment_14043879" aria-describedby="caption-attachment-14043879" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14043879-2-e1690580956748.jpeg"><img class="size-full wp-image-14043879" src="https://i.epochtimes.com/assets/uploads/2023/07/id14043879-2-e1690580956748.jpeg" alt="" width="450" b="462" /></a><figcaption id="caption-attachment-14043879" class="wp-caption-text">（网页截图）</figcaption></figure>
+	<p>【大纪元2023年07月29日讯】（大纪元记者李净报导）自郭美美炫富等丑闻被曝光后，令中共官方慈善机构的公信力受到质疑，其接收社会捐款的数额剧减。近日，大陆媒体披露中国红十字会总会人均43万元的消息，引起舆论争议。</p>
+<p>7月26日，新浪、网易等大陆网站刊登一篇题为“人间有真情，中国红十字总会发布数据，人均工资福利收入仅43.5万”的文章，该文原本为中国红十字会总会救助灾民的“善举”点赞，反而透露了中国慈善机构不愿公开的“秘密”。</p>
+<p>文章展示了中国红十字会总会的支出数据，在工资福利支出一栏，其中包括基本工资、津贴补贴、奖金、伙食补助等十项支出，合计支出为2,612万元。文章还特别提到，中国红十字会总会的公职人员为60人，人均为43.5万元。</p>
+<figure id="attachment_14043878" aria-describedby="caption-attachment-14043878" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14043878-1-e1690580906952.jpeg"><img decoding="async" class="size-full wp-image-14043878" src="https://i.epochtimes.com/assets/uploads/2023/07/id14043878-1-e1690580906952.jpeg" alt="" width="450" b="462" /></a><figcaption id="caption-attachment-14043878" class="wp-caption-text">（网页截图）</figcaption></figure>
+<figure id="attachment_14043879" aria-describedby="caption-attachment-14043879" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14043879-2-e1690580956748.jpeg"><img decoding="async" class="size-full wp-image-14043879" src="https://i.epochtimes.com/assets/uploads/2023/07/id14043879-2-e1690580956748.jpeg" alt="" width="450" b="462" /></a><figcaption id="caption-attachment-14043879" class="wp-caption-text">（网页截图）</figcaption></figure>
 <p>上述相关文章在受到舆论关注并引起争议后，目前已经被删除。</p>
 <p>实际上，中共官媒环球网早在2012年就曾为中国红十字会辩护时提到，广州市红十字会员工的工资福利、补助等人均14.2万。官媒解释称，“红十字会不是靠捐款运作”。</p>
-<figure id="attachment_14043880" aria-describedby="caption-attachment-14043880" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14043880-19f709339140051a20723d7b83ed8753-e1690581055610.jpg"><img class="size-full wp-image-14043880" src="https://i.epochtimes.com/assets/uploads/2023/07/id14043880-19f709339140051a20723d7b83ed8753-e1690581055610.jpg" alt="" width="450" b="185" /></a><figcaption id="caption-attachment-14043880" class="wp-caption-text">（网页截图）</figcaption></figure>
-<p>不过，大纪元此前报导，2020年1月，体重仅43斤的贵州贫困大学生<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%90%B4%E8%8A%B1%E7%87%95.md#1">吴花燕</a>去世后，中共民政部旗下的募捐平台被曝光，在吴花燕不知情的情况下，同时使用两个平台以其名义募款超过100万元，但吴花燕在去世前仅获得两万元。<ahref=><a href="https://github.com/19920513/djy/blob/master/gb/20/1/14/n11793494.md#1">相关报导</a>）</p>
+<figure id="attachment_14043880" aria-describedby="caption-attachment-14043880" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14043880-19f709339140051a20723d7b83ed8753-e1690581055610.jpg"><img decoding="async" class="size-full wp-image-14043880" src="https://i.epochtimes.com/assets/uploads/2023/07/id14043880-19f709339140051a20723d7b83ed8753-e1690581055610.jpg" alt="" width="450" b="185" /></a><figcaption id="caption-attachment-14043880" class="wp-caption-text">（网页截图）</figcaption></figure>
+<p>不过，大纪元此前报导，2020年1月，体重仅43斤的贵州贫困大学生吴花燕去世后，中共民政部旗下的募捐平台被曝光，在吴花燕不知情的情况下，同时使用两个平台以其名义募款超过100万元，但吴花燕在去世前仅获得两万元。<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/20/1/14/n11793494.md#1">相关报导</a>）</p>
 <p>据公开资料显示，中国红十字会总会由中共国务院领导，内设机构包括人事部、筹资与财务部、组织宣传部、机关党委等部门。</p>
-<p>自2011年后，陆续曝出的卢湾区红十字会高额餐饮费事件、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%83%AD%E7%BE%8E%E7%BE%8E.md#1">郭美美</a>事件、名人假捐摆拍、“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E8%82%9A%E5%A5%B3%E5%AD%A9.md#1">大肚女孩</a>”捐款延迟事件、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%90%B4%E8%8A%B1%E7%87%95.md#1">吴花燕</a>事件、总会领导每人配两辆豪车等事件，令中共官方慈善机构的公信力受到质疑，其接收社会捐款的数额剧减。</p>
+<p>自2011年后，陆续曝出的卢湾区红十字会高额餐饮费事件、郭美美事件、名人假捐摆拍、“大肚女孩”捐款延迟事件、吴花燕事件、总会领导每人配两辆豪车等事件，令中共官方慈善机构的公信力受到质疑，其接收社会捐款的数额剧减。</p>
 <h2>救灾物资被村委会丢弃 遭当地村民曝光</h2>
 <p>7月28日，《新京报》报导了一起爱心捐助事件，引起网民热议。</p>
 <p>据报导，2021年10月，山西省运城市稷山县荆平村遭水灾后，该村收到社会各界捐来的救灾物资。近日，荆平村村民披露，该村的部分救灾物资面粉等被弃山沟。</p>
 <p>据当地村民说，有部分救灾物资放的时间过长，有多袋面粉、方便面被丢弃在山沟里。而荆平村村委会主任对此解释称，丢弃的捐助面粉、方便面均已过期，不是我们故意不发。</p>
-<figure id="attachment_14043884" aria-describedby="caption-attachment-14043884" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14043884-bd2c6ed61225ebfb3b701051712749c4-e1690582749922.jpg"><img class="size-full wp-image-14043884" src="https://i.epochtimes.com/assets/uploads/2023/07/id14043884-bd2c6ed61225ebfb3b701051712749c4-e1690582749922.jpg" alt="" width="450" b="392" /></a><figcaption id="caption-attachment-14043884" class="wp-caption-text">（网页截图）</figcaption></figure>
+<figure id="attachment_14043884" aria-describedby="caption-attachment-14043884" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14043884-bd2c6ed61225ebfb3b701051712749c4-e1690582749922.jpg"><img decoding="async" class="size-full wp-image-14043884" src="https://i.epochtimes.com/assets/uploads/2023/07/id14043884-bd2c6ed61225ebfb3b701051712749c4-e1690582749922.jpg" alt="" width="450" b="392" /></a><figcaption id="caption-attachment-14043884" class="wp-caption-text">（网页截图）</figcaption></figure>
 <p>该事件追溯到2021年10月，山西省运城市遭遇水灾。据西部决策网此前报导，多名网友反映，稷山县稷峰镇荆平村村内洪水漫入，水位上涨受灾严重。据称，村内水位深处约有2米，村民已经陆续转移至地势较高的邻村。</p>
 <p>当时的稷峰镇政府官员曾透过媒体呼吁，当地急需救援物资，包括抽水机、救生衣、食物，纯净水等。</p>
 <p>如今，面对社会爱心人士捐助的救灾物资被丢弃，不少网民表示愤怒。</p>
 <p>有网友评论说：“面粉还能过期？这在官家库房得放了多久才扔掉的。”</p>
+<p>“最简单的方式，查看生产日期，对比保质期最后期限，就知道村委收时是否过期了？”</p>
 <p>“村官：捐钱就好了嘛，这种物资最难搞了，捞不到实惠，还要找工人，最好直接捐钱。”</p>
 <p>“在天灾面前给他们捐款是没用的，款到了还要联系需要购买的物资，最难的是运输，如何运进灾区，等折腾完了好几天都过去了。”</p>
 <p>“如果物资是他们扔的，显然是他们从中没有捞到油水，即使扔了都不给村民。”</p>
 <p>责任编辑：孙芸#</p>
-<div id="gtx-trans" style="position: absolute; left: -5px; top: 88.8571px;"></div>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/9/12/n8292869.md#1">甘肃一家因穷自杀 低保被分配给书记亲属</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/13/n11791346.md#1">中共高调“奔小康” 43斤女大学生因贫去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707987.md#1">中共刚宣布脱贫 四川墨茶因贫致死引全网关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/9/7/n13217879.md#1">中国慈善机构曝丑闻 一公益项目涉嫌违规套捐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/9/12/n8292869.md#1">甘肃一家因穷自杀 低保被分配给书记亲属</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/13/n11791346.md#1">中共高调“奔小康” 43斤女大学生因贫去世</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707987.md#1">中共刚宣布脱贫 四川墨茶因贫致死引全网关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/7/n13217879.md#1">中国慈善机构曝丑闻 一公益项目涉嫌违规套捐</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10784939.md#1" target="_blank">共产暴政录：“抗美援朝”真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489082.md#1" target="_blank">反迫害20周年 34国法轮功学员伦敦集会</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/31/n11293194.md#1" target="_blank">【征文】章阁：荒谬的社会发展“五阶段论”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/11/n11178933.md#1" target="_blank">亚利桑那媒体：中共强摘器官对美国有何影响</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042367.md#1">港作家叹大陆出不了这三人 最欣赏倪匡气节</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040949.md#1">【未解之谜】特异功能大师 李有甫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040988.md#1">女子过世时灵魂变光球离体 几天前曾见天使</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/21/n14038991.md#1">中国哲学思想的智慧：虚室生白 吉祥自来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14033186.md#1">净莲为法开 侠女修行记（5）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14043925.md#1">【新唐人快报】习出席大运会 成都满街警察</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043888.md#1">【菁英论坛】北京上海同出大事 中共气数将尽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044293.md#1">【新闻五人行】火箭军被一锅端 习军权或不稳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043684.md#1">秦刚落马背后更深层内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043438.md#1">外交部网站部长“复活” 秦刚讯息重新上架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14043115.md#1">“火箭干部”秦刚快速陨落 分析：暴习致命弱点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043525.md#1">传杨紫琼已嫁前法拉利总裁 友人曝在瑞士完婚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14043003.md#1">娜琏惊喜造访出道秀 MISAMO因TWICE的话落泪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14043016.md#1">江宏杰赴东京开记者会 吁福原爱履行法院判决</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14043248.md#1">林嘉欣宣布离婚 与导演袁剑伟结束12年婚姻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14043165.md#1">吴亦凡案二审 加拿大外交官旁听遭拒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14042866.md#1">如何让厨房的旧海绵“起死回生”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040401.md#1">为何午餐后昏昏欲睡？试试这5个醒脑技巧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/9/n14031083.md#1">薄荷治疗头痛、恶心、便秘 效果媲美5种常用药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14042814.md#1">从事这5种有创意的活动 可以让你更快乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14041168.md#1">夏天最缺水 你喝对了吗？每天6个时间点补水最佳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/6/1/n2138665.md#1">善有善报，拖久了还付利息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346708.md#1">【思想领袖】美国必须在太空领域击败中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347432.md#1">【马克时空】以哈战争一周年 开启领导先走模式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343384.md#1">【环球直击】中国股市低失去动力 港股大跌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346022.md#1">宁德时代停产 专家：中国锂电业进入淘汰赛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346454.md#1">前政治局常委吴邦国病亡 “五不搞”曾引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346441.md#1">房价断崖式下跌 分析：大陆中产返贫或成定局</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346417.md#1">《派遣女医X》以电影版落幕 米仓凉子感性落泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346990.md#1">越南餐厅推出“珍珠奶茶牛肉面” 是啥味道？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346769.md#1">秋季宜多吃“白色”食物 按三阴交穴保健</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346351.md#1">想了解空服员吗？ 先看这个工作的优缺点比较</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/28/n14043872.htm">中国红十字会被曝人均工资福利43万 文章被删</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043872.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/28/n14043872.htm">中国红十字会被曝人均工资福利43万 文章被删</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/28/n14043872.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
